--- a/package.json
+++ b/package.json
@@ -24,6 +24,13 @@
     "expo": "^23.0.4",
     "react": "16.0.0",
     "react-native": "0.50.3",
-    "react-navigation": "^1.0.0-beta.22"
+    "react-navigation": "^1.0.0-beta.22",
+    "react-native-bottom-navigation": "^0.2.0",
+    "react-native-material-bottom-navigation": "^0.7.0",
+    "react-native-md5": "^1.0.0",
+    "react-native-recyclerview-list": "^0.2.3",
+    "react-native-vector-icons": "^4.4.3",
+    "react-navigation": "^1.0.0-beta.22",
+    "recyclerlistview": "^1.2.2"
   }
 }
