--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-bottom-navigation": "^0.2.0",
     "react-native-material-bottom-navigation": "^0.7.0",
     "react-native-md5": "^1.0.0",
-    "react-native-vector-icons": "^4.4.3"
+    "react-native-vector-icons": "^4.4.3",
+    "recyclerlistview": "latest"
   }
 }
