聊天匹配界面

--- a/package.json
+++ b/package.json
@@ -28,8 +28,12 @@
     "react-native-bottom-navigation": "^0.2.0",
     "react-native-material-bottom-navigation": "^0.7.0",
     "react-native-md5": "^1.0.0",
+    "react-native-router-flux": "^4.0.0-beta.28",
     "react-native-vector-icons": "^4.4.3",
     "react-navigation": "^1.0.0-beta.22",
-    "recyclerlistview": "1.2.2"
+    "react-redux": "^5.0.6",
+    "react-router-flux": "^1.0.0",
+    "recyclerlistview": "1.2.2",
+    "redux": "^3.7.2"
   }
 }
